--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
